// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPaginationNudger should display backward nudger 1`] = `
<DocumentFragment>
  <div
    class="bpk-pagination-nudger"
  >
    <button
      class="bpk-pagination-nudger__button"
      type="button"
    >
      <span
        style="line-height: 1.125rem; display: inline-block; margin-top: 0.1875rem; vertical-align: top;"
      >
        <svg
          class="bpk-pagination-nudger__icon bpk-icon--rtl-support"
          height="24"
          style="width: 1.5rem; height: 1.5rem;"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.5 17.293V6.707a1.632 1.632 0 00-2.701-1.296l-5.724 5.081a1.75 1.75 0 00-.121 2.472q.035.039.072.075l5.724 5.505a1.632 1.632 0 002.75-1.251z"
          />
        </svg>
      </span>
      <span
        class="bpk-pagination-nudger__text--hidden"
      >
        previous
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPaginationNudger should display forward nudger 1`] = `
<DocumentFragment>
  <div
    class="bpk-pagination-nudger"
  >
    <button
      class="bpk-pagination-nudger__button"
      type="button"
    >
      <span
        style="line-height: 1.125rem; display: inline-block; margin-top: 0.1875rem; vertical-align: top;"
      >
        <svg
          class="bpk-pagination-nudger__icon bpk-icon--rtl-support"
          height="24"
          style="width: 1.5rem; height: 1.5rem;"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 17.293V6.707a1.632 1.632 0 012.701-1.296l5.724 5.081a1.75 1.75 0 01.121 2.472q-.035.039-.072.075l-5.724 5.505a1.632 1.632 0 01-2.75-1.251z"
          />
        </svg>
      </span>
      <span
        class="bpk-pagination-nudger__text--hidden"
      >
        next
      </span>
    </button>
  </div>
</DocumentFragment>
`;
